Fix accent block text alignment with calc()

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -130,8 +130,8 @@ h3 {
 /* Accent block - bleeds into left margin */
 h2 + p {
   border-left: 6px solid #000;
-  padding-left: 1.5em;
-  margin-left: -1.5em;
+  padding-left: 1em;
+  margin-left: calc(-1em - 6px);
 }
 
 /* Instructor block - softer than dateline */
